--- a/AB_testing_with_Thompson_Sampling_RL.ipynb
+++ b/AB_testing_with_Thompson_Sampling_RL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "AB testing with Thompson Sampling_RL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM/udWvBQFb5DEAcrlQuoMq",
+      "authorship_tag": "ABX9TyMhO+JSgNPx44Cri4pZlJ0L",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,7 +47,7 @@
       "metadata": {
         "id": "tNc8cKr5uz3M"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -77,7 +77,7 @@
       "metadata": {
         "id": "HzfExUNC4CjL"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -92,7 +92,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "JNnGg7JVurVG"
       },
@@ -146,7 +146,7 @@
         "id": "Pw4K7qfoQ_N_",
         "outputId": "e50ea0a3-60ac-43a1-e4e7-5f0e54eb87a0"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -176,7 +176,7 @@
         "id": "bX0rlqfVRFw4",
         "outputId": "163e2f72-714a-49ae-d685-91906eca2fe3"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -209,7 +209,7 @@
         "id": "uKI77-eISvzc",
         "outputId": "4061f533-757e-45e8-b501-eb196e4cdbff"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -219,6 +219,36 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "######################  End of the project   #########################"
+      ],
+      "metadata": {
+        "id": "ALwpaMeewBIm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Multi arm bandit concept</br>\n",
+        "</br>\n",
+        "Upper Confidence Bound (UCB)</br>\n",
+        "CTR Optimization (Click through rate) on 10 car advertisements"
+      ],
+      "metadata": {
+        "id": "lgR0hu67wFpv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "4ziOMIV6wUo4"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
