--- a/AB_testing_with_Thompson_Sampling_RL.ipynb
+++ b/AB_testing_with_Thompson_Sampling_RL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "AB testing with Thompson Sampling_RL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMhO+JSgNPx44Cri4pZlJ0L",
+      "authorship_tag": "ABX9TyPjGrB0bDuGTr285jpDHI9C",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -243,9 +243,56 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import pandas as pd\n",
+        "\n",
+        "dataset = pd.read_csv('Ads_CTR_Optimisation.csv')\n",
+        "\n",
+        "import math\n",
+        "N = 10000\n",
+        "d = 10\n",
+        "ads_selected = []\n",
+        "numbers_of_selections = [0] * d\n",
+        "sums_of_rewards = [0] * d\n",
+        "total_reward = 0\n",
+        "for n in range(0, N):\n",
+        "  ad = 0\n",
+        "  max_upper_bound = 0\n",
+        "  for i in range(0, d):\n",
+        "    if (numbers_of_selections[i] > 0):\n",
+        "      average_reward = sums_of_rewards[i] / numbers_of_selections[i]\n",
+        "      delta_i = math.sqrt(3/2 * math.log(n + 1) / numbers_of_selections[i])\n",
+        "      upper_bound = average_reward + delta_i\n",
+        "    else:\n",
+        "      upper_bound = 1e400\n",
+        "    if (upper_bound > max_upper_bound):\n",
+        "      max_upper_bound = upper_bound\n",
+        "      ad = i\n",
+        "  ads_selected.append(ad)\n",
+        "  numbers_of_selections[ad] = numbers_of_selections[ad] + 1\n",
+        "  reward = dataset.values[n, ad]\n",
+        "  sums_of_rewards[ad] = sums_of_rewards[ad] + reward\n",
+        "  total_reward = total_reward + reward\n"
+      ],
       "metadata": {
         "id": "4ziOMIV6wUo4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.hist(ads_selected)\n",
+        "plt.title('Histogram of ads selections')\n",
+        "plt.xlabel('Ads')\n",
+        "plt.ylabel('Number of times each ad was selected')\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "x6bKcgNe0XnH"
       },
       "execution_count": null,
       "outputs": []
