--- a/AB_testing_with_Thompson_Sampling_RL.ipynb
+++ b/AB_testing_with_Thompson_Sampling_RL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "AB testing with Thompson Sampling_RL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPjGrB0bDuGTr285jpDHI9C",
+      "authorship_tag": "ABX9TyNk+O6QR5oMaQmxPzNQ6mBH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -248,7 +248,18 @@
         "import matplotlib.pyplot as plt\n",
         "import pandas as pd\n",
         "\n",
-        "dataset = pd.read_csv('Ads_CTR_Optimisation.csv')\n",
+        "dataset = pd.read_csv(\"/content/Ads_CTR_Optimisation.csv\")"
+      ],
+      "metadata": {
+        "id": "6-5J0jQk0zoy"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
         "\n",
         "import math\n",
         "N = 10000\n",
@@ -277,10 +288,24 @@
         "  total_reward = total_reward + reward\n"
       ],
       "metadata": {
-        "id": "4ziOMIV6wUo4"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 132
+        },
+        "id": "4ziOMIV6wUo4",
+        "outputId": "a44efa11-adc3-46b6-b35e-7c87c2906dde"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-117febfa6ae8>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    dataset = pd.read_csv(/content/Ads_CTR_Optimisation.csv)\u001b[0m\n\u001b[0m                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
