--- a/AB_testing_with_Thompson_Sampling_RL.ipynb
+++ b/AB_testing_with_Thompson_Sampling_RL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "AB testing with Thompson Sampling_RL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNk+O6QR5oMaQmxPzNQ6mBH",
+      "authorship_tag": "ABX9TyModV5MG19RDtvuTd7UfrKc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -253,26 +253,24 @@
       "metadata": {
         "id": "6-5J0jQk0zoy"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "\n",
         "import math\n",
-        "N = 10000\n",
+        "N = 10000  #round = user\n",
         "d = 10\n",
         "ads_selected = []\n",
-        "numbers_of_selections = [0] * d\n",
+        "numbers_of_selections = [0] * d  #how many times an ad has been selected, shown to the viewer\n",
         "sums_of_rewards = [0] * d\n",
         "total_reward = 0\n",
-        "for n in range(0, N):\n",
+        "for n in range(0, N): \n",
         "  ad = 0\n",
         "  max_upper_bound = 0\n",
-        "  for i in range(0, d):\n",
-        "    if (numbers_of_selections[i] > 0):\n",
+        "  for i in range(0, d):  #go through the ads\n",
+        "    if (numbers_of_selections[i] > 0):  #first all ads has 0\n",
         "      average_reward = sums_of_rewards[i] / numbers_of_selections[i]\n",
         "      delta_i = math.sqrt(3/2 * math.log(n + 1) / numbers_of_selections[i])\n",
         "      upper_bound = average_reward + delta_i\n",
@@ -280,7 +278,7 @@
         "      upper_bound = 1e400\n",
         "    if (upper_bound > max_upper_bound):\n",
         "      max_upper_bound = upper_bound\n",
-        "      ad = i\n",
+        "      ad = i \n",
         "  ads_selected.append(ad)\n",
         "  numbers_of_selections[ad] = numbers_of_selections[ad] + 1\n",
         "  reward = dataset.values[n, ad]\n",
@@ -288,24 +286,10 @@
         "  total_reward = total_reward + reward\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 132
-        },
-        "id": "4ziOMIV6wUo4",
-        "outputId": "a44efa11-adc3-46b6-b35e-7c87c2906dde"
+        "id": "4ziOMIV6wUo4"
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-117febfa6ae8>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    dataset = pd.read_csv(/content/Ads_CTR_Optimisation.csv)\u001b[0m\n\u001b[0m                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
-        }
-      ]
+      "execution_count": 8,
+      "outputs": []
     },
     {
       "cell_type": "code",
