--- a/AB_testing_with_Thompson_Sampling_RL.ipynb
+++ b/AB_testing_with_Thompson_Sampling_RL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "AB testing with Thompson Sampling_RL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyModV5MG19RDtvuTd7UfrKc",
+      "authorship_tag": "ABX9TyNPc+MkO8aCFQRxz+aS5r58",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -263,7 +263,7 @@
         "N = 10000  #round = user\n",
         "d = 10\n",
         "ads_selected = []\n",
-        "numbers_of_selections = [0] * d  #how many times an ad has been selected, shown to the viewer\n",
+        "numbers_of_selections = [0] * d  #how many times an ad has been selected,\n",
         "sums_of_rewards = [0] * d\n",
         "total_reward = 0\n",
         "for n in range(0, N): \n",
