--- a/AB_testing_with_Thompson_Sampling_RL.ipynb
+++ b/AB_testing_with_Thompson_Sampling_RL.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "AB testing with Thompson Sampling_RL.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNPc+MkO8aCFQRxz+aS5r58",
+      "authorship_tag": "ABX9TyMvzFTeYbZseBua9ncxz9kr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -253,7 +253,7 @@
       "metadata": {
         "id": "6-5J0jQk0zoy"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -288,7 +288,7 @@
       "metadata": {
         "id": "4ziOMIV6wUo4"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -302,6 +302,62 @@
       ],
       "metadata": {
         "id": "x6bKcgNe0XnH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Thompson Sampling approach\n"
+      ],
+      "metadata": {
+        "id": "e4oO2D46X3zH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random  #we will take a random draw from Beta distrubution\n",
+        "N = 10000\n",
+        "d = 10\n",
+        "ads_selected = []\n",
+        "numbers_of_rewards_1 = [0] * d\n",
+        "numbers_of_rewards_0 = [0] * d\n",
+        "total_reward = 0\n",
+        "for n in range(0, N):\n",
+        "  ad = 0\n",
+        "  max_random = 0\n",
+        "  for i in range(0, d):\n",
+        "    random_beta = random.betavariate(numbers_of_rewards_1[i] + 1, numbers_of_rewards_0[i] + 1)\n",
+        "    if (random_beta > max_random):\n",
+        "      max_random = random_beta\n",
+        "      ad = i\n",
+        "  ads_selected.append(ad)\n",
+        "  reward = dataset.values[n, ad]\n",
+        "  if reward == 1:\n",
+        "    numbers_of_rewards_1[ad] = numbers_of_rewards_1[ad] + 1\n",
+        "  else:\n",
+        "    numbers_of_rewards_0[ad] = numbers_of_rewards_0[ad] + 1\n",
+        "  total_reward = total_reward + reward"
+      ],
+      "metadata": {
+        "id": "P6RYc5PyX7pv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.hist(ads_selected)\n",
+        "plt.title('Histogram of ads selections')\n",
+        "plt.xlabel('Ads')\n",
+        "plt.ylabel('Number of times each ad was selected')\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "YEBRUk-vZPAs"
       },
       "execution_count": null,
       "outputs": []
